fix bug + add website logo
